# elearning-back

./: .gitignore  Dockerfile  db.sqlite3  fly.toml  fly_db.toml  pyproject.toml
.config/uwsgi/: conf.ini
.github/workflows/: fly.yml
conf/: settings.py  urls.py  wsgi.py
elearning/: admin.py  urls.py
elearning/django_customizations/: drf_customizations.py  drf_jwt_customizations.py
elearning/migrations/: 0001_initial.py  0002_alter_lecture_description_alter_lecture_title_and_more.py
elearning/models/: lecture.py  lecture_model.py  user.py  user_info_model.py  user_model.py  video.py
elearning/serializers/: lecture.py  user.py  user_info.py  video.py
elearning/services/: lecture_service.py  user_service.py
elearning/tests/: test_auth_views.py
elearning/utils/: test_utils.py  token_utils.py
elearning/views/: lecture.py  lecture_view.py  myuser_view.py  user.py  user_info_view.py  user_view.py  video.py
fly/: urls.py
uploader/: admin.py  models.py  serializers.py  test_api.py  test_views.py  urls.py  views.py
uploader/migrations/: 0001_initial.py  0002_video_description_video_like_count_video_play_count_and_more.py  0003_video_lecture_video_semester_video_thumbnail_and_more.py
user_account/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user_account/migrations/: 0001_initial.py  0002_rename_email_userinfo_user_id.py  0003_remove_userinfo_user_id_userinfo_user_jwttoken_and_more.py  0004_userinfo_validation_code.py  0005_alter_jwttoken_token.py  0005_jwttoken_blacklist.py  0006_userinfo_user_role.py  (+2 more)
