[tool.poetry]
name = "elearning-platform-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "elearning_platform_back"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
