[tool.poetry]
name = "elearning-platform-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
django-storages = "^1.13.2"
django-environ = "^0.10.0"
boto3 = "^1.26.138"
drf-spectacular = "^0.26.2"
jwt = "^1.3.1"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
